OpExecutor and OpExecutorDispatcher optionally take Binding in execute()